# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 JG for Cedar Grove Maker Studios
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "cedargrove-circuitpython-waveviz"
description = "A CircuitPython class to create a bitmap graphic from a synthio waveform wave_table."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Cedar Grove Maker Studios"}
]
urls = {Homepage = "https://github.com/CedarGroveStudios/Cedargrove_CircuitPython_WaveViz"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "waveviz",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["cedargrove_waveviz"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
